fix alignment problem in mediaquery

--- a/src/routes/03-Projects/_mediaqueries.scss
+++ b/src/routes/03-Projects/_mediaqueries.scss
@@ -71,6 +71,7 @@
 				margin-top: 1rem;
 				width: min(500px, 100%);
 				min-width: unset;
+				margin-inline: auto;
 			}
 
 			.project-tech-icon {
@@ -151,7 +152,6 @@
 			}
 
 			.project-buttons-container {
-				flex-flow: column wrap;
 				width: 100%;
 				margin-top: 2rem;
 
